parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseKriti -> value                         (0)
	string_lit -> string                               (1)
	num_lit -> number                                  (2)
	boolean -> 'true'                                  (3)
	boolean -> 'false'                                 (4)
	null -> 'null'                                     (5)
	null -> '{' '}'                                    (6)
	array -> '[' list_elements ']'                     (7)
	array -> '[' ']'                                   (8)
	list_elements -> value                             (9)
	list_elements -> list_elements ',' value           (10)
	object -> '{' object_fields '}'                    (11)
	object_fields -> object_field                      (12)
	object_fields -> object_fields ',' object_field    (13)
	object_field -> string ':' value                   (14)
	operator -> predicate '>' predicate                (15)
	operator -> predicate '<' predicate                (16)
	operator -> predicate '==' predicate               (17)
	operator -> predicate '&&' predicate               (18)
	operator -> predicate '||' predicate               (19)
	functions -> 'escapeUri' value                     (20)
	iff -> '{{' 'if' predicate '}}' value '{{' 'else' '}}' value '{{' 'end' '}}'   (21)
	predicate -> path                                  (22)
	predicate -> iff                                   (23)
	predicate -> operator                              (24)
	predicate -> boolean                               (25)
	predicate -> '(' predicate ')'                     (26)
	range -> range_decl value '{{' 'end' '}}'          (27)
	range_decl -> '{{' 'range' ident ',' ident ':=' value '}}'   (28)
	range_decl -> '{{' 'range' '_' ',' ident ':=' value '}}'   (29)
	path -> ident path_list                            (30)
	path_list -> path_element                          (31)
	path_list -> path_list path_element                (32)
	path_element -> '.' ident                          (33)
	path_element -> '[' '\'' ident '\'' ']'            (34)
	path_element -> '[' number ']'                     (35)
	value -> string_lit                                (36)
	value -> num_lit                                   (37)
	value -> boolean                                   (38)
	value -> null                                      (39)
	value -> array                                     (40)
	value -> object                                    (41)
	value -> path                                      (42)
	value -> iff                                       (43)
	value -> functions                                 (44)
	value -> range                                     (45)
	value -> '(' value ')'                             (46)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { Identifier $$ }
	string         { StringLit $$ }
	number         { NumLit $$ }
	'if'           { Identifier "if" }
	'else'         { Identifier "else" }
	'end'          { Identifier "end" }
	'null'         { Identifier "null" }
	'range'        { Identifier 'range' }
	'escapeUri'    { Identifier "escapeUri" }
	'true'         { BoolLit True }
	'false'        { BoolLit False }
	'\''           { SingleQuote }
	':'            { Colon }
	'.'            { Colon }
	','            { Comma }
	'=='           { Eq }
	'>'            { Gt }
	'<'            { Lt }
	'&&'           { And }
	'||'           { Or }
	'{'            { CurlyOpen }
	'}'            { CurlyClose }
	'{{'           { DoubleCurlyOpen }
	'}}'           { DoubleCurlyClose }
	'['            { SquareOpen }
	']'            { SquareClose }
	'('            { ParenOpen }
	')'            { ParenClose }
	'_'            { Underscore }
	':='           { Assignment }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseKriti rule  0
	string_lit      rule  1
	num_lit         rule  2
	boolean         rules 3, 4
	null            rules 5, 6
	array           rules 7, 8
	list_elements   rules 9, 10
	object          rule  11
	object_fields   rules 12, 13
	object_field    rule  14
	operator        rules 15, 16, 17, 18, 19
	functions       rule  20
	iff             rule  21
	predicate       rules 22, 23, 24, 25, 26
	range           rule  27
	range_decl      rules 28, 29
	path            rule  30
	path_list       rules 31, 32
	path_element    rules 33, 34, 35
	value           rules 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseKriti -> . value                        (rule 0)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 14

State 1

	string_lit -> . string                              (rule 1)

	string         shift, and enter state 2


State 2

	string_lit -> string .                              (rule 1)

	','            reduce using rule 1
	'}'            reduce using rule 1
	'{{'           reduce using rule 1
	'}}'           reduce using rule 1
	']'            reduce using rule 1
	')'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	value -> string_lit .                               (rule 36)

	','            reduce using rule 36
	'}'            reduce using rule 36
	'{{'           reduce using rule 36
	'}}'           reduce using rule 36
	']'            reduce using rule 36
	')'            reduce using rule 36
	%eof           reduce using rule 36


State 4

	value -> num_lit .                                  (rule 37)

	','            reduce using rule 37
	'}'            reduce using rule 37
	'{{'           reduce using rule 37
	'}}'           reduce using rule 37
	']'            reduce using rule 37
	')'            reduce using rule 37
	%eof           reduce using rule 37


State 5

	value -> boolean .                                  (rule 38)

	','            reduce using rule 38
	'}'            reduce using rule 38
	'{{'           reduce using rule 38
	'}}'           reduce using rule 38
	']'            reduce using rule 38
	')'            reduce using rule 38
	%eof           reduce using rule 38


State 6

	value -> null .                                     (rule 39)

	','            reduce using rule 39
	'}'            reduce using rule 39
	'{{'           reduce using rule 39
	'}}'           reduce using rule 39
	']'            reduce using rule 39
	')'            reduce using rule 39
	%eof           reduce using rule 39


State 7

	value -> array .                                    (rule 40)

	','            reduce using rule 40
	'}'            reduce using rule 40
	'{{'           reduce using rule 40
	'}}'           reduce using rule 40
	']'            reduce using rule 40
	')'            reduce using rule 40
	%eof           reduce using rule 40


State 8

	value -> object .                                   (rule 41)

	','            reduce using rule 41
	'}'            reduce using rule 41
	'{{'           reduce using rule 41
	'}}'           reduce using rule 41
	']'            reduce using rule 41
	')'            reduce using rule 41
	%eof           reduce using rule 41


State 9

	value -> functions .                                (rule 44)

	','            reduce using rule 44
	'}'            reduce using rule 44
	'{{'           reduce using rule 44
	'}}'           reduce using rule 44
	']'            reduce using rule 44
	')'            reduce using rule 44
	%eof           reduce using rule 44


State 10

	value -> iff .                                      (rule 43)

	','            reduce using rule 43
	'}'            reduce using rule 43
	'{{'           reduce using rule 43
	'}}'           reduce using rule 43
	']'            reduce using rule 43
	')'            reduce using rule 43
	%eof           reduce using rule 43


State 11

	value -> range .                                    (rule 45)

	','            reduce using rule 45
	'}'            reduce using rule 45
	'{{'           reduce using rule 45
	'}}'           reduce using rule 45
	']'            reduce using rule 45
	')'            reduce using rule 45
	%eof           reduce using rule 45


State 12

	range -> range_decl . value '{{' 'end' '}}'         (rule 27)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 40

State 13

	value -> path .                                     (rule 42)

	','            reduce using rule 42
	'}'            reduce using rule 42
	'{{'           reduce using rule 42
	'}}'           reduce using rule 42
	']'            reduce using rule 42
	')'            reduce using rule 42
	%eof           reduce using rule 42


State 14

	%start_parseKriti -> value .                        (rule 0)

	%eof           accept


State 15

	path -> ident . path_list                           (rule 30)

	'.'            shift, and enter state 38
	'['            shift, and enter state 39

	path_list      goto state 36
	path_element   goto state 37

State 16

	num_lit -> number .                                 (rule 2)

	','            reduce using rule 2
	'}'            reduce using rule 2
	'{{'           reduce using rule 2
	'}}'           reduce using rule 2
	']'            reduce using rule 2
	')'            reduce using rule 2
	%eof           reduce using rule 2


State 17

	null -> 'null' .                                    (rule 5)

	','            reduce using rule 5
	'}'            reduce using rule 5
	'{{'           reduce using rule 5
	'}}'           reduce using rule 5
	']'            reduce using rule 5
	')'            reduce using rule 5
	%eof           reduce using rule 5


State 18

	functions -> 'escapeUri' . value                    (rule 20)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 35

State 19

	boolean -> 'true' .                                 (rule 3)

	','            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'<'            reduce using rule 3
	'&&'           reduce using rule 3
	'||'           reduce using rule 3
	'}'            reduce using rule 3
	'{{'           reduce using rule 3
	'}}'           reduce using rule 3
	']'            reduce using rule 3
	')'            reduce using rule 3
	%eof           reduce using rule 3


State 20

	boolean -> 'false' .                                (rule 4)

	','            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'<'            reduce using rule 4
	'&&'           reduce using rule 4
	'||'           reduce using rule 4
	'}'            reduce using rule 4
	'{{'           reduce using rule 4
	'}}'           reduce using rule 4
	']'            reduce using rule 4
	')'            reduce using rule 4
	%eof           reduce using rule 4


State 21

	null -> '{' . '}'                                   (rule 6)
	object -> '{' . object_fields '}'                   (rule 11)

	string         shift, and enter state 33
	'}'            shift, and enter state 34

	object_fields  goto state 31
	object_field   goto state 32

State 22

	iff -> '{{' . 'if' predicate '}}' value '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)
	range_decl -> '{{' . 'range' ident ',' ident ':=' value '}}'    (rule 28)
	range_decl -> '{{' . 'range' '_' ',' ident ':=' value '}}'    (rule 29)

	'if'           shift, and enter state 29
	'range'        shift, and enter state 30


State 23

	array -> '[' . list_elements ']'                    (rule 7)
	array -> '[' . ']'                                  (rule 8)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	']'            shift, and enter state 28
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	list_elements  goto state 26
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 27

State 24

	value -> '(' . value ')'                            (rule 46)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 25

State 25

	value -> '(' value . ')'                            (rule 46)

	')'            shift, and enter state 60


State 26

	array -> '[' list_elements . ']'                    (rule 7)
	list_elements -> list_elements . ',' value          (rule 10)

	','            shift, and enter state 58
	']'            shift, and enter state 59


State 27

	list_elements -> value .                            (rule 9)

	','            reduce using rule 9
	']'            reduce using rule 9


State 28

	array -> '[' ']' .                                  (rule 8)

	','            reduce using rule 8
	'}'            reduce using rule 8
	'{{'           reduce using rule 8
	'}}'           reduce using rule 8
	']'            reduce using rule 8
	')'            reduce using rule 8
	%eof           reduce using rule 8


State 29

	iff -> '{{' 'if' . predicate '}}' value '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 54
	path           goto state 55

State 30

	range_decl -> '{{' 'range' . ident ',' ident ':=' value '}}'    (rule 28)
	range_decl -> '{{' 'range' . '_' ',' ident ':=' value '}}'    (rule 29)

	ident          shift, and enter state 49
	'_'            shift, and enter state 50


State 31

	object -> '{' object_fields . '}'                   (rule 11)
	object_fields -> object_fields . ',' object_field    (rule 13)

	','            shift, and enter state 47
	'}'            shift, and enter state 48


State 32

	object_fields -> object_field .                     (rule 12)

	','            reduce using rule 12
	'}'            reduce using rule 12


State 33

	object_field -> string . ':' value                  (rule 14)

	':'            shift, and enter state 46


State 34

	null -> '{' '}' .                                   (rule 6)

	','            reduce using rule 6
	'}'            reduce using rule 6
	'{{'           reduce using rule 6
	'}}'           reduce using rule 6
	']'            reduce using rule 6
	')'            reduce using rule 6
	%eof           reduce using rule 6


State 35

	functions -> 'escapeUri' value .                    (rule 20)

	','            reduce using rule 20
	'}'            reduce using rule 20
	'{{'           reduce using rule 20
	'}}'           reduce using rule 20
	']'            reduce using rule 20
	')'            reduce using rule 20
	%eof           reduce using rule 20


State 36

	path -> ident path_list .                           (rule 30)
	path_list -> path_list . path_element               (rule 32)

	'.'            shift, and enter state 38
	','            reduce using rule 30
	'=='           reduce using rule 30
	'>'            reduce using rule 30
	'<'            reduce using rule 30
	'&&'           reduce using rule 30
	'||'           reduce using rule 30
	'}'            reduce using rule 30
	'{{'           reduce using rule 30
	'}}'           reduce using rule 30
	'['            shift, and enter state 39
	']'            reduce using rule 30
	')'            reduce using rule 30
	%eof           reduce using rule 30

	path_element   goto state 45

State 37

	path_list -> path_element .                         (rule 31)

	'.'            reduce using rule 31
	','            reduce using rule 31
	'=='           reduce using rule 31
	'>'            reduce using rule 31
	'<'            reduce using rule 31
	'&&'           reduce using rule 31
	'||'           reduce using rule 31
	'}'            reduce using rule 31
	'{{'           reduce using rule 31
	'}}'           reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	')'            reduce using rule 31
	%eof           reduce using rule 31


State 38

	path_element -> '.' . ident                         (rule 33)

	ident          shift, and enter state 44


State 39

	path_element -> '[' . '\'' ident '\'' ']'           (rule 34)
	path_element -> '[' . number ']'                    (rule 35)

	number         shift, and enter state 42
	'\''           shift, and enter state 43


State 40

	range -> range_decl value . '{{' 'end' '}}'         (rule 27)

	'{{'           shift, and enter state 41


State 41

	range -> range_decl value '{{' . 'end' '}}'         (rule 27)

	'end'          shift, and enter state 75


State 42

	path_element -> '[' number . ']'                    (rule 35)

	']'            shift, and enter state 74


State 43

	path_element -> '[' '\'' . ident '\'' ']'           (rule 34)

	ident          shift, and enter state 73


State 44

	path_element -> '.' ident .                         (rule 33)

	'.'            reduce using rule 33
	','            reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'<'            reduce using rule 33
	'&&'           reduce using rule 33
	'||'           reduce using rule 33
	'}'            reduce using rule 33
	'{{'           reduce using rule 33
	'}}'           reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	')'            reduce using rule 33
	%eof           reduce using rule 33


State 45

	path_list -> path_list path_element .               (rule 32)

	'.'            reduce using rule 32
	','            reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'<'            reduce using rule 32
	'&&'           reduce using rule 32
	'||'           reduce using rule 32
	'}'            reduce using rule 32
	'{{'           reduce using rule 32
	'}}'           reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	')'            reduce using rule 32
	%eof           reduce using rule 32


State 46

	object_field -> string ':' . value                  (rule 14)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 72

State 47

	object_fields -> object_fields ',' . object_field    (rule 13)

	string         shift, and enter state 33

	object_field   goto state 71

State 48

	object -> '{' object_fields '}' .                   (rule 11)

	','            reduce using rule 11
	'}'            reduce using rule 11
	'{{'           reduce using rule 11
	'}}'           reduce using rule 11
	']'            reduce using rule 11
	')'            reduce using rule 11
	%eof           reduce using rule 11


State 49

	range_decl -> '{{' 'range' ident . ',' ident ':=' value '}}'    (rule 28)

	','            shift, and enter state 70


State 50

	range_decl -> '{{' 'range' '_' . ',' ident ':=' value '}}'    (rule 29)

	','            shift, and enter state 69


State 51

	predicate -> boolean .                              (rule 25)

	'=='           reduce using rule 25
	'>'            reduce using rule 25
	'<'            reduce using rule 25
	'&&'           reduce using rule 25
	'||'           reduce using rule 25
	'}}'           reduce using rule 25
	')'            reduce using rule 25


State 52

	predicate -> operator .                             (rule 24)

	'=='           reduce using rule 24
	'>'            reduce using rule 24
	'<'            reduce using rule 24
	'&&'           reduce using rule 24
	'||'           reduce using rule 24
	'}}'           reduce using rule 24
	')'            reduce using rule 24


State 53

	predicate -> iff .                                  (rule 23)

	'=='           reduce using rule 23
	'>'            reduce using rule 23
	'<'            reduce using rule 23
	'&&'           reduce using rule 23
	'||'           reduce using rule 23
	'}}'           reduce using rule 23
	')'            reduce using rule 23


State 54

	operator -> predicate . '>' predicate               (rule 15)
	operator -> predicate . '<' predicate               (rule 16)
	operator -> predicate . '==' predicate              (rule 17)
	operator -> predicate . '&&' predicate              (rule 18)
	operator -> predicate . '||' predicate              (rule 19)
	iff -> '{{' 'if' predicate . '}}' value '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)

	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'<'            shift, and enter state 65
	'&&'           shift, and enter state 66
	'||'           shift, and enter state 67
	'}}'           shift, and enter state 68


State 55

	predicate -> path .                                 (rule 22)

	'=='           reduce using rule 22
	'>'            reduce using rule 22
	'<'            reduce using rule 22
	'&&'           reduce using rule 22
	'||'           reduce using rule 22
	'}}'           reduce using rule 22
	')'            reduce using rule 22


State 56

	iff -> '{{' . 'if' predicate '}}' value '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)

	'if'           shift, and enter state 29


State 57

	predicate -> '(' . predicate ')'                    (rule 26)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 62
	path           goto state 55

State 58

	list_elements -> list_elements ',' . value          (rule 10)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 61

State 59

	array -> '[' list_elements ']' .                    (rule 7)

	','            reduce using rule 7
	'}'            reduce using rule 7
	'{{'           reduce using rule 7
	'}}'           reduce using rule 7
	']'            reduce using rule 7
	')'            reduce using rule 7
	%eof           reduce using rule 7


State 60

	value -> '(' value ')' .                            (rule 46)

	','            reduce using rule 46
	'}'            reduce using rule 46
	'{{'           reduce using rule 46
	'}}'           reduce using rule 46
	']'            reduce using rule 46
	')'            reduce using rule 46
	%eof           reduce using rule 46


State 61

	list_elements -> list_elements ',' value .          (rule 10)

	','            reduce using rule 10
	']'            reduce using rule 10


State 62

	operator -> predicate . '>' predicate               (rule 15)
	operator -> predicate . '<' predicate               (rule 16)
	operator -> predicate . '==' predicate              (rule 17)
	operator -> predicate . '&&' predicate              (rule 18)
	operator -> predicate . '||' predicate              (rule 19)
	predicate -> '(' predicate . ')'                    (rule 26)

	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'<'            shift, and enter state 65
	'&&'           shift, and enter state 66
	'||'           shift, and enter state 67
	')'            shift, and enter state 86


State 63

	operator -> predicate '==' . predicate              (rule 17)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 85
	path           goto state 55

State 64

	operator -> predicate '>' . predicate               (rule 15)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 84
	path           goto state 55

State 65

	operator -> predicate '<' . predicate               (rule 16)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 83
	path           goto state 55

State 66

	operator -> predicate '&&' . predicate              (rule 18)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 82
	path           goto state 55

State 67

	operator -> predicate '||' . predicate              (rule 19)

	ident          shift, and enter state 15
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{{'           shift, and enter state 56
	'('            shift, and enter state 57

	boolean        goto state 51
	operator       goto state 52
	iff            goto state 53
	predicate      goto state 81
	path           goto state 55

State 68

	iff -> '{{' 'if' predicate '}}' . value '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)

	ident          shift, and enter state 15
	string         shift, and enter state 2
	number         shift, and enter state 16
	'null'         shift, and enter state 17
	'escapeUri'    shift, and enter state 18
	'true'         shift, and enter state 19
	'false'        shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	string_lit     goto state 3
	num_lit        goto state 4
	boolean        goto state 5
	null           goto state 6
	array          goto state 7
	object         goto state 8
	functions      goto state 9
	iff            goto state 10
	range          goto state 11
	range_decl     goto state 12
	path           goto state 13
	value          goto state 80

State 69

	range_decl -> '{{' 'range' '_' ',' . ident ':=' value '}}'    (rule 29)

	ident          shift, and enter state 79


State 70

	range_decl -> '{{' 'range' ident ',' . ident ':=' value '}}'    (rule 28)

	ident          shift, and enter state 78


State 71

	object_fields -> object_fields ',' object_field .    (rule 13)

	','            reduce using rule 13
	'}'            reduce using rule 13


State 72

	object_field -> string ':' value .                  (rule 14)

	','            reduce using rule 14
	'}'            reduce using rule 14


State 73

	path_element -> '[' '\'' ident . '\'' ']'           (rule 34)

	'\''           shift, and enter state 77


State 74

	path_element -> '[' number ']' .                    (rule 35)

	'.'            reduce using rule 35
	','            reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'<'            reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	'}'            reduce using rule 35
	'{{'           reduce using rule 35
	'}}'           reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	')'            reduce using rule 35
	%eof           reduce using rule 35


State 75

	range -> range_decl value '{{' 'end' . '}}'         (rule 27)

	'}}'           shift, and enter state 76


State 76

	range -> range_decl value '{{' 'end' '}}' .         (rule 27)

	','            reduce using rule 27
	'}'            reduce using rule 27
	'{{'           reduce using rule 27
	'}}'           reduce using rule 27
	']'            reduce using rule 27
	')'            reduce using rule 27
	%eof           reduce using rule 27


State 77

	path_element -> '[' '\'' ident '\'' . ']'           (rule 34)

	']'            shift, and enter state 90


State 78

	range_decl -> '{{' 'range' ident ',' ident . ':=' value '}}'    (rule 28)

	':='           shift, and enter state 89


State 79

	range_decl -> '{{' 'range' '_' ',' ident . ':=' value '}}'    (rule 29)

	':='           shift, and enter state 88


State 80

	iff -> '{{' 'if' predicate '}}' value . '{{' 'else' '}}' value '{{' 'end' '}}'    (rule 21)

	'{{'           shift, and enter state 87


State 81

	operator -> predicate . '>' predicate               (rule 15)
	operator -> predicate . '<' predicate               (rule 16)
	operator -> predicate . '==' predicate              (rule 17)
	operator -> predicate . '&&' predicate              (rule 18)
	operator -> predicate . '||' predicate              (rule 19)
	operator -> predicate '||' predicate .              (rule 19)

	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	'&&'           reduce using rule 19
	'||'           reduce using rule 19
	'}}'           reduce using rule 19
	')'            reduce using rule 19


State 82

	operator -> predicate . '>' predicate               (rule 15)
	operator -> predicate . '<' predicate               (rule 16)
	operator -> predicate . '==' predicate              (rule 17)
	operator -> predicate . '&&' predicate              (rule 18)
	operator -> predicate '&&' predicate .              (rule 18)
	operator -> predicate . '||' predicate              (rule 19)
